test/pass/macro.rnp
let outer = 1;

macro x($a, $b) {
    let a = $a;
    let b = $b;
    (a * a + b * b) / outer;
}

x(2, 3);
---
1 sp0
2 sp1
3 sp2
l1 l1 * l2 l2 * + l0 / p
